--- a/style.css
+++ b/style.css
@@ -21,9 +21,13 @@ li.list-url {
 	/*display: inline-block;*/
 }
 
+li {
+	padding: 3px;
+}
+
 div.link-container {
 	/*background-color: red; */
-	padding: 10px;
+	padding: 6px;
 }
 
 #listarea {
