--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	width: 200px;
 	background-color: white;
 	padding: 10px;
-	margin: 10px;
+	margin: 20px 10px;
 	border-radius: 1em;
 }
 
@@ -53,6 +53,7 @@ li {
 div.link-container {
 	/*background-color: red; */
 	padding: 6px;
+	border-radius: 1em;
 }
 
 #listarea {
@@ -98,4 +99,5 @@ input[type="submit"] {
 .error {
 	color: red;
 }
+
 
