--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 html {
 	background-color: green;
 	background-color: #990033;
+	min-width: 325px;
 }
 
 #container {
-	width: 200px;
+	/*width: 200px;*/
 	background-color: #ffffe6;
 	padding: 10px;
 	margin: 20px 10px;
 	border-radius: 1em;
+	text-align: center;
 }
 
 h1 {
@@ -56,7 +58,6 @@ li {
 }
 
 div.link-container {
-	/*background-color: red; */
 	padding: 6px;
 	border-radius: 1em;
 }
@@ -67,7 +68,7 @@ div.link-container {
 }
 
 #listarea {
-	width: 200px;
+	/*width: 200px;*/
 }
 
 
